Set default version to latest with mike 0.5.2

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Redirecting</title>
   <script>
-    window.location.replace("beta-1");
+    window.location.replace("latest");
   </script>
 </head>
 <body>
